--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nguniversal/express-engine": "^15.0.0",
     "express": "^4.15.2",
     "moment": "^2.29.4",
+    "ngx-editor": "^15.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
